h1. CHANGELOG

h2. 2.1.10 August 25, 2012 

* update 'railsapps' recipe to allow choice of erb or Haml for all example apps
* fix 'models', 'auth', and 'init' recipes to handle Devise confirmable module (contributed by Vitaly Kushner)
* fix 'setup' recipe to exclude CanCan authorization when OmniAuth authentication is selected
* update gem 'twitter-bootstrap-rails' from 2.1.1 to 2.1.3
* update gem 'omniauth' from 1.1.0 to 1.1.1
* update gem 'mongoid' from 3.0.4 to 3.0.5

h2. 2.1.9 August 20, 2012

* option to set '-T' or '-O' args in a default file (contributed by Michaël Witrant)

h2. 2.1.8 August 18, 2012

* add option to 'extras' recipe to create a GitHub repo
* fix errors in recipes to implement 'subdomains_app'
* fix 'gems' recipe to set database names for MySQL or PostgreSQL (contributed by Tom Scott)

h2. 2.1.7 August 17, 2012

* update 'gems' recipe to create MySQL database
* update 'gems' and 'frontend' recipe to fix 'foundation'
* update 'gems' so webserver gem is only installed once when production and dev are the same

h2. 2.1.6 August 14, 2012

* update 'gems' recipe to create PostgreSQL user and database 
* update 'gems' and 'frontend' recipes to use 'foundation' generator

h2. 2.1.5 August 14, 2012

* fix 'gems' recipe to modify database.yml except when 'mongoid' is selected
* fix 'layout.erb' to enable git commits (contributed by tomykaira)

h2. 2.1.4 August 13, 2012

* renamed 'all' recipe as 'core' to select all core recipes
* fix 'gems' recipe to modify database.yml as needed for 'postgresql' or 'mysql'

h2. 2.1.3 August 13, 2012

* added 'all' recipe as shortcut to selecting all recipes
* changed name of 'database' recipe to 'init' to reduce confusion
* new 'copy_from' method in helpers.erb
* fix 'frontend' recipe for correct downloads of 'normalize' and 'skeleton'
* fix 'extras' recipe to run after 'database' recipe for a final git commit
* fix 'gems' recipe to remove 'sqlite3' from the Gemfile unless 'sqlite' is selected