@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.1.10"
+  VERSION = "2.2.0"
 end
